--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_questions_practice">QuestionsPracticeActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_question_practice">QuestionPracticeActivity</string>
+    <string name="tab_text_1">Level 1</string>
+    <string name="tab_text_2">Level 2</string>
+    <string name="tab_text_3">Level 3</string>
 </resources>
