--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,11 @@
 
     <string name="action_logout">Logout</string>
     <string name="action_editProfile">Edit Profile</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_questions_practice">QuestionsPracticeActivity</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_question_practice">QuestionPracticeActivity</string>
-    <string name="tab_text_1">Level 1</string>
-    <string name="tab_text_2">Level 2</string>
-    <string name="tab_text_3">Level 3</string>
+    <string-array name="professionalsList">
+        <item>-Select-</item>
+        <item>1st Professional</item>
+        <item>2nd Professional</item>
+        <item>3rd Professional</item>
+        <item>4th Professional</item>
+    </string-array>
 </resources>
