--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,12 @@
         <item>2nd Professional</item>
         <item>3rd Professional</item>
     </string-array>
-
+    <string name="title_activity_different_materials">DifferentMaterialsActivity</string>
+    <string name="tab_text_1">MCQs</string>
+    <string name="tab_text_2">Record</string>
+    <string name="tab_text_3">Practical</string>
+    <string name="tab_text_4">PYQ</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 
 </resources>
