--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -277,7 +277,7 @@
     <string name="tab_text_3">Practical</string>
     <string name="tab_text_4">PYQ</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="department_prompt">Enter Department Name:</string>
+    <string name="department_prompt">Select Department</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
