featured videos admin part under progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1259,6 +1259,13 @@ Kolkata</item>
         <item>Radiotherapy</item>
     </string-array>
 
+    <string-array name="categories">
+        <item>Educational</item>
+        <item>Games</item>
+        <item>Pshycology</item>
+        <item>Nothing</item>
+    </string-array>
+
     <string name="title_activity_different_materials">DifferentMaterialsActivity</string>
     <string name="tab_text_2">Record</string>
     <string name="tab_text_3">Practical</string>
@@ -1266,6 +1273,7 @@ Kolkata</item>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="department_prompt">Select Department</string>
     <string name="college_prompt">Select College Name</string>
+    <string name="categories_prompt">Select Category</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
