doctor's information bug fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1223,14 +1223,14 @@ Kolkata</item>
         <item>Anatomy</item>
         <item>Physiology</item>
         <item>Biochemistry</item>
-        <item>Comm. Medicine</item>
+        <item>Comm Medicine</item>
         <item>Pathology</item>
         <item>Microbiology</item>
         <item>Pharmacology</item>
         <item>FMT</item>
         <item>Radiology</item>
         <item>Medicine</item>
-        <item>Pul-Medicine</item>
+        <item>Pul Medicine</item>
         <item>Surgery</item>
         <item>Orthopedics</item>
         <item>Psychiatry</item>
@@ -1246,11 +1246,11 @@ Kolkata</item>
         <item>Gastroenterology</item>
         <item>Endocrinology</item>
         <item>Clinical Hematolgy</item>
-        <item>C.T.V.Surgery</item>
+        <item>CTV Surgery</item>
         <item>Plastic Surgery</item>
         <item>Urology</item>
         <item>Neurosurgery</item>
-        <item>G.I.Surgery</item>
+        <item>GI Surgery</item>
         <item>Endocrine Surgery</item>
         <item>Transfusion Medicine</item>
         <item>Paediatric Surgery</item>
