--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SCB App</string>
+    <string name="app_name">Que9</string>
 
     <!-- Strings related to login-->
     <string name="error_invalid_email">This email address is invalid</string>
